--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,3 @@
 [build]
-  command = "npm run build"
+  command = "node node_modules/vite/bin/vite.js build"
   publish = "dist"
-
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
